.learnings/maintenance.log
  File "/root/.openclaw/workspace/.learnings/memory_maintenance.py", line 178
    lines = [l for l in err.split('
                                  ^
SyntaxError: unterminated string literal (detected at line 178)
Mon May  4 09:41:03 AM CST 2026
Script syntax fixed, ran at Mon May  4 09:41:03 AM CST 2026
==================================================
每周记忆整理 2026-05-13 22:00
==================================================
1/5 清理临时文件...
Traceback (most recent call last):
  File "/root/.openclaw/workspace/.learnings/memory_maintenance.py", line 136, in <module>
    cleaned = clean_temp_files()
              ^^^^^^^^^^^^^^^^^^
  File "/root/.openclaw/workspace/.learnings/memory_maintenance.py", line 35, in clean_temp_files
    age = get_file_age_days(path)
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/.openclaw/workspace/.learnings/memory_maintenance.py", line 21, in get_file_age_days
    return (datetime.now() - datetime.fromtimestamp(os.path.getmtime(path))).days
                                                    ^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen genericpath>", line 67, in getmtime
FileNotFoundError: [Errno 2] No such file or directory: '/root/.openclaw/workspace/skills/hunter-trading/scripts/test_examples.md'
==================================================
每周记忆整理 2026-05-14 22:00
==================================================
1/5 清理临时文件...
   清理了 1 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 327.9 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-15 22:00
==================================================
1/5 清理临时文件...
   清理了 0 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 328.1 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-16 22:00
==================================================
1/5 清理临时文件...
   清理了 0 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 328.6 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-17 22:00
==================================================
1/5 清理临时文件...
   清理了 0 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 328.7 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-18 22:00
==================================================
1/5 清理临时文件...
   清理了 0 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 329.0 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-19 22:00
==================================================
1/5 清理临时文件...
   清理了 1 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 329.2 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-20 22:00
==================================================
1/5 清理临时文件...
   清理了 1 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 329.6 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-21 22:00
==================================================
1/5 清理临时文件...
   清理了 4 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 330.4 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
==================================================
每周记忆整理 2026-05-22 22:00
==================================================
1/5 清理临时文件...
   清理了 0 个临时文件
2/5 整理 learnings...
   无 learnings 内容
3/5 更新 MEMORY.md...
   无需更新
4/5 清理过期每日学习...
   清理了 0 个过期文件
5/5 生成健康报告...
   工作区: 330.6 MB
   learnings: 0 个文件

✅ 整理完成

6/6 每周自诊...
   ⚠️ 发现 1 项需关注:
   - MEMORY.md中有未完成的待办事项
